# Active_learning

./: .gitignore  README.md  pyproject.toml  requirements.txt
Notebook/: active_learning.ipynb  prototyping.ipynb  summary_acquisition.csv
Notebook/result_npy/: bald.npy  max_entropy.npy  mean_std_acquisition.npy  prediction_summary.npy  var_ratios.npy
Training/: acquisition_functions.py  active_learning.py  cnn_model.py  load_data.py  main.py  model_management.py  start_mlflow_ui.bat  start_mlflow_ui.py  train_active_learning.py
mlruns/0/: meta.yaml
