[project]
name = "active-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.1",
    "matplotlib>=3.10.1",
    "modal",
    "numpy>=2.2.5",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
]
